<resources>
    <string name="app_name">Pretty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_no_account_signup">Don\'t have an account? <font color="#2196F3">Register Now</font></string>
    <string name="txt_register_header">Create New Account</string>
    <string name="txt_register_subheader">Please provide all the required information</string>
    <string name="txt_username">Username</string>
    <string name="txt_username_hint">amitcode</string>
    <string name="txt_email">Email</string>
    <string name="txt_phone">Phone</string>
    <string name="txt_email_hint">amitcode@gmail.com</string>
    <string name="txt_password">Password</string>
    <string name="txt_password_hint">**********</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_already_have_account">Already have an account? <font color="#2196F3">Login Now</font></string>
    <string name="txt_login_header">Welcome Back!</string>
    <string name="txt_login_subheader">Login to access your app</string>
    <string name="txt_login">Login</string>
    <string name="txt_error_message">%1$S*</string>
    <string name="note_title">Title</string>
    <string name="txt_title_hint">Write your title</string>
    <string name="txt_description">Description</string>
    <string name="txt_description_hint">Write your description</string>
    <string name="txt_submit">Submit</string>
    <string name="add_note">Add Note</string>
    <string name="term_condition">Login means you agree to our <u><font color="#2196F3">Terms &amp; Privacy Policy.</font></u></string>
    <string name="continue_with">Login To Continue</string>
    <string name="txt_phone_hint">phone</string>
    <string name="txt_otp_verification">Verification</string>
    <string name="txt_otp_sent">Verification code sent on your email</string>
    <string name="txt_otp">Otp</string>
    <string name="txt_code">verification code</string>
    <string name="txt_verify">Verify</string>
    <string name="txt_resend">Resend code</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_setup">Setup your basic information</string>
    <string name="txt_id">ID:</string>
    <string name="txt_nickname">Nickname:</string>
    <string name="txt_nickname_hint">3 - 20 characters</string>
    <string name="txt_region">Region:</string>
    <string name="txt_gender">Gender:</string>
    <string name="txt_male">Male</string>
    <string name="txt_female">Female</string>
    <string name="txt_enter">Enter</string>
    <string name="home">Home</string>
    <string name="video">Video</string>
    <string name="live">Live</string>
    <string name="chat">Chat</string>
    <string name="user">User</string>
    <string name="txt_enter_phone">Enter your phone number to continue</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="txt_name">Pretty</string>
    <string name="txt_inbox">Inbox</string>
    <string name="select_payment_receival_type">*Select payment Receival Type:</string>
    <string name="txt_level">My Level</string>
    <string name="agora_app_id">5003dbe0cc2d4303a7ed8d5ba946ccaa</string>

    <string name="path_search">
       M141,17 A9,9 0 1,1 142,16 L149,23
    </string>


    <string name="bit_rate_value_with_unit">%d kbps</string>
    <string name="frame_rate_value_with_unit">%d fps</string>
    <string name="just_160_diamonds_to_unlock_all_my_private_photos">Just 160 diamonds to unlock all my private photos</string>
    <string-array name="country"

        >

        <item>All Country</item>
        <item>India</item>
        <item>USA</item>
        <item>UK</item>


    </string-array>

    <string name="msg_connection_error">Connection error, please check the network settings or make sure channel name/access token are valid</string>


    <string name="label_title_resolution">Resolution</string>
    <string name="label_title_frame_rate">Frame Rate(fps)</string>
    <string name="account">Account</string>
    <string name="general">General</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>

    <string-array name="string_array_resolutions">
        <item>160x120</item>
        // 120P
        <item>320x180</item>
        // 180P
        <item>320x240</item>
        // 240P the default one
        <item>640x360</item>
        // 360P
        <item>640x480</item>
        // 480P
        <item>1280x720</item>
        // 720P
    </string-array>

    <string-array name="string_array_frame_rate">
        <item>1</item>
        <item>7</item>
        <item>10</item>
        <item>15</item>
        // the default one
        <item>24</item>
        <item>30</item>
    </string-array>

    <string-array name="string_array_bit_rate">
        <item>80</item>
        // 120P
        <item>160</item>
        // 180P
        <item>200</item>
        // 240P
        <item>400</item>
        // 360P
        <item>500</item>
        // 480P
        <item>1000</item>
        // 720P
    </string-array>

</resources>