<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_light"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/HeaderTextStyle"
            android:text="@string/txt_settings"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            style="@style/NormalTextStyle"
            android:text="@string/txt_setup"
            android:textColor="@color/light_gray"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/NormalTextStyle"
                    android:textAllCaps="true"
                    android:text="@string/txt_id" />
                <TextView
                    android:layout_marginTop="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/NormalTextStyle"
                    android:text="@string/txt_nickname" />

                <TextView
                    android:layout_marginTop="26dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/NormalTextStyle"
                    android:text="@string/txt_region" />

                <TextView
                    android:layout_marginTop="26dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/NormalTextStyle"
                    android:text="@string/txt_gender" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="7">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/NormalTextStyle"
                    android:textAllCaps="true"
                    android:textColor="@color/light_gray"
                    android:text="6754326570" />

                <EditText
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_nickname_hint"
                    android:textColor="@color/white"
                    android:textColorHint="@color/light_gray"/>

                <TextView
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/NormalTextStyle"
                    android:textColor="@color/light_gray"
                    android:text="India" />

                <RadioGroup
                    android:layout_marginTop="18dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/light_gray"
                        android:buttonTint="@color/light_gray"
                        android:text="@string/txt_male"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/light_gray"
                        android:buttonTint="@color/light_gray"
                        android:text="@string/txt_female"/>

                </RadioGroup>

            </LinearLayout>


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_enter"
            style="@style/MyButtonStyle_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/txt_enter"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <com.github.ybq.android.spinkit.SpinKitView
            android:visibility="gone"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/progress_bar"
            android:indeterminate="true"
            style="@style/SpinKitView.ThreeBounce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/black" />

    </LinearLayout>


</ScrollView>